--- a/p4.html
+++ b/p4.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body> <!-- WIDTH WIDE THE IMAGE AND THE HEIGHT GIVES HEIGHT -->
+  <!--  color(font color) ,background-color(for backside the text/background)
+  width of background fit in content (widhth:fit-content) ,font-size(size of text)px
+  -->
   <div>
     <a href=""><img src="img/lenovo.jpeg" height="200px" width="700px" alt="lenovo"></a>
-    <p style="color: rgba(205, 83, 7, 0.934);">14000 RS</p><br>
+    <p style="color:red;background-color:salmon;width: fit-content;">14000 RS</p><br>
     <a href=""><img src="img/lenovo.jpeg" height="200px" width="700px" alt="lenovo"></a>
-    <p style="color: rgb(11, 88, 119);">16000 RS</p><br>
+    <p style="color: rgb(11, 88, 119);font-size: 60px;">16000 RS</p><br>
     <a href=""><img src="img/lenovo.jpeg" height="200px" width="700px" alt="lenovo"></a>
     <p style="color: rgb(5, 110, 36);" >18000 RS</p><br>
   </div>  
