--- a/p6.html
+++ b/p6.html
@@ -4,18 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>margin example</title>
 </head>
 
 <body>
-    <p style="margin:400px 20px 30px  60px;">Lorem ipsum dolor sit amet consectetur
+
+
+    <p style="margin-left: 100px;">Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Consectetur at quo neque
         aut exercitationem accusantium quas architecto
         consequatur molestias minima distinctio, eveniet inventore
         , velit voluptate aliquam quam sapiente placeat? Lorem ipsum dolor
         sit, amet consectetur adipisicing elit. Est voluptate, culpa, quibusdam
         aperiam unde amet tenetur maiores quia, nesciunt ratione sed corporis magni
-         fugiat tempora sit quo recusandae!
+        fugiat tempora sit quo recusandae!
+        Explicabo, laudantium?</p>
+
+    <p style="margin-right: 100px;">Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Consectetur at quo neque
+        aut exercitationem accusantium quas architecto
+        consequatur molestias minima distinctio, eveniet inventore
+        , velit voluptate aliquam quam sapiente placeat? Lorem ipsum dolor
+        sit, amet consectetur adipisicing elit. Est voluptate, culpa, quibusdam
+        aperiam unde amet tenetur maiores quia, nesciunt ratione sed corporis magni
+        fugiat tempora sit quo recusandae!
+        Explicabo, laudantium?</p>
+
+        <p style="margin-top: 200px;">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Consectetur at quo neque
+            aut exercitationem accusantium quas architecto
+            consequatur molestias minima distinctio, eveniet inventore
+            , velit voluptate aliquam quam sapiente placeat? Lorem ipsum dolor
+            sit, amet consectetur adipisicing elit. Est voluptate, culpa, quibusdam
+            aperiam unde amet tenetur maiores quia, nesciunt ratione sed corporis magni
+            fugiat tempora sit quo recusandae!
+            Explicabo, laudantium?</p>        
+
+    <p style="margin:400px 20px 300px  60px;">Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Consectetur at quo neque
+        aut exercitationem accusantium quas architecto
+        consequatur molestias minima distinctio, eveniet inventore
+        , velit voluptate aliquam quam sapiente placeat? Lorem ipsum dolor
+        sit, amet consectetur adipisicing elit. Est voluptate, culpa, quibusdam
+        aperiam unde amet tenetur maiores quia, nesciunt ratione sed corporis magni
+        fugiat tempora sit quo recusandae!
         Explicabo, laudantium?</p>
 </body>
 
