--- a/lapatop categories/lenovo.html
+++ b/lapatop categories/lenovo.html
@@ -6,14 +6,12 @@
     <title>DELL LATOPS </title>
 </head>
 <body>
-    <h1>PRODUCTS</h1>
-    <H6>DELL</h6>
-    <p>price 15000rs
-    </p>
+   
     <p>color available
-        <img src="" alt="black">
-        <img src="" alt="golden">
-        <img src="" alt="white">
+        <img src="../img/dell2.jpeg" alt="black" fonts title="all lenovo black categories">
+        <h3>black color</h3>
+        <!-- <img src="" alt="golden">
+        <img src="" alt="white"> -->
     </p>
 
     </body>
