--- a/works/p10.html
+++ b/works/p10.html
@@ -17,14 +17,24 @@
         font-size: 20px;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
       }
+      .i1{
+        background-color: blueviolet;
+      }
     </style>
 </head>
 <body> 
-
+  <i>my name is </i>
+  <h1> <i class="i1">my name is </i></h1>
+  <h1> <i>my name is </i></h1>
+  <h1> <i class="i1">my name is </i></h1>
+  <h1> <i>my name is </i></h1>
+  <h1> <i>my name is </i></h1>
   <!-- css help to save time to code reuse it-->
   <p class="p1">what are you doing</p>
   <p title="i am running">what are you doing</p>
-  
+  <h1 style="background-color: blueviolet;
+   font-size: 50px;font-family: Impact, Haettenschweiler,
+  'Arial Narrow Bold', sans-serif;">HELLO GOOD MORNING</h1>
   <p>what are doing </p>
   <p>what are watching </p>
   <p class="p1">what are seen </p>
