--- a/works/p6.html
+++ b/works/p6.html
@@ -39,8 +39,8 @@
             aperiam unde amet tenetur maiores quia, nesciunt ratione sed corporis magni
             fugiat tempora sit quo recusandae!
             Explicabo, laudantium?</p>        
-
-    <p style="margin:400px 20px 300px  60px;">Lorem ipsum dolor sit amet consectetur
+                <!-- top  right bottom left  -->
+    <p style="margin:100px 40px 2000px  1000px;">Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Consectetur at quo neque
         aut exercitationem accusantium quas architecto
         consequatur molestias minima distinctio, eveniet inventore
