--- a/pro12.html
+++ b/pro12.html
@@ -24,8 +24,8 @@
 
 
     <p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
-    <p>The <abbr title="World Health Organization">WHO <sub style="font-size: 7px;">2016</sub>
-        </abbr> was founded in 1948.</p>
+    <p>The <abbr title="World Health Organization">WHO
+        </abbr><sub style="font-size: 7px;">2016</sub> was founded in 1948.</p>
     <address>
         Written by John Doe.<br>
         Visit us at:<br>
@@ -33,6 +33,20 @@
         Box 564, Disneyland<br>
         USA
     </address>
+
+    <p>Here is a quote from WWF's website:</p>
+
+    <blockquote cite="http://www.worldwildlife.org/who/index.html">
+        For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization,
+        WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and
+        deliver innovative solutions that protect communities, wildlife, and the places in which they live.
+    </blockquote>
+
+    <blockquote>
+        This is a quotation from another source.
+        <cite>http://www.example.com</cite>
+    </blockquote>
+      
 </body>
 
 </html>
