--- a/pro21.html
+++ b/pro21.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pro21</title>
 </head>
+<style>
+i{
+    background-color: aqua;
+}
+a{
+    background-color: yellow;
+}
+button{
+    font-size: 30px;
+}
+img{
+    height: 100px;
+    width: 200px;
+
+}
+img:hover{
+    border-radius: 20px;
+    height: 100px;
+    width: 230px;
+}
+
+</style>
+
 <body>
-    <a href="./lalji_p.html" target="_blank">click it</a>
-    <a href="./lalji_p.html" target="_parent">click it</a>
-    <a href="./lalji_p.html" target="_self">click it</a>
-    <a href="./lalji_p.html" target="_top">click it</a>
-
-    <a href="mailto:shubhbhanderi@gmail.com" target="_top">click it</a>
-
-    <button>HTML Tutorial</button>
+    <h1>
+        <i>The target attribute specifies where to open the linked document.</i>
+        <a href="./lalji_p.html" target="_blank">click it</a><br>
+        <i>_blank - Opens the document in a new window or tab</i>
+        <a href="./lalji_p.html" target="_parent">click it</a><br>
+        <i>_parent - Opens the document in the parent frame</i>
+        <a href="./lalji_p.html" target="_self">click it</a><br>
+        <i>_top - Opens the document in the full body of the window</i>
+        <a href="./lalji_p.html" target="_top">click it</a><br>
+        <i>for mail mailto:name@gmail.com</i>
+        <a href="mailto:shubhbhanderi@gmail.com">click it</a><br>
+        <button onclick="document.location='pro20.html'">button</button><br>
+    </h1>
+    <img src="./images/fs.jpeg" alt=""><br>
+    <img src="./images/fs.jpeg" alt=""><br>
 </body>
+
 </html>
