--- a/pro26.html
+++ b/pro26.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            a{
-                background-color: blueviolet;
-                color: azure;
-                text-decoration: none;
-                padding: 10px;
-                border-radius: 10px;
-            }
-        </style>
+        <title>pro26</title>
     </head>
 <body>
 
-<p><a href="#C4">click to download bhabhuli 5 </a></p><br>
-<p><a href="#C10">Jump to Chapter 10</a></p><br>
-<p><a href="pro26.html#C6">click to download rrr </a></p><br>
+<p><a href="#C4">click to download bhabhuli 5 </a></p>
+<p><a href="#C10">Jump to Chapter 10</a></p>
 
 <h2>Chapter 1</h2>
 <p>This chapter explains ba bla bla</p>
@@ -32,8 +23,8 @@
 <h2 >Chapter 5</h2>
 <p>This chapter explains ba bla bla</p>
 
-<h2>Chapter 6</h2>
-<p>This chapter explains ba bla bla</p>
+<img src="./images/sad.jpeg" id="C6">
+<p>This RRR explains ba bla bla</p>
 
 <h2>Chapter 7</h2>
 <p>This chapter explains ba bla bla</p>
