--- a/pro44.html
+++ b/pro44.html
@@ -17,14 +17,15 @@
 </head>
 <body>
     <table>
-        <tr><th colspan="2">items</th></tr>
-        <tr><td rowspan="3">hot food</td><td>sup</td></tr>
+        <tr><th>items</th><th>recipe</th></tr>
+        <tr><td rowspan="3">hot food</td> <td>sup</td></tr>
+        <tr>
+            <td>sup</td>
+        </tr>
         <tr>
             <td>tea</td>
         </tr>
-        <tr>
-            <td>coffee</td>
-        </tr>
+
     </table>
 </body>
 </html>
