--- a/pro66.html
+++ b/pro66.html
@@ -31,7 +31,7 @@
             var x = document.getElementsByClassName("city");
             for (var i = 0; i < x.length; i++){
                 if(x[i].style.display === "block") {
-                    x[i].style.display = "none";
+                    x[i].style.border = "20px solid red";
                 }
                 else {
                     x[i].style.display = "block";
