--- a/show_hide.html
+++ b/show_hide.html
@@ -5,7 +5,7 @@
 <h2>Use of The class Attribute in JavaScript</h2>
 <p>Click the button to toggle the visibility of elements with class name "city":</p>
 
-<button onclick="toggleVisibility()">Toggle elements</button>
+<button onclick="btn()">Toggle elements</button>
 
 <h1 id="mrIndia" style="display: none;">MR.INDIA</h1>
 
@@ -22,27 +22,15 @@
 <p>Paris is the capital of France.</p>
 
 <h2 class="city">Tokyo</h2>
-<p>Tokyo is the capital of Japan.</p>
+<p style="color: blueviolet;">Tokyo is the capital of Japan.</p>
 
 <script>
-function toggleVisibility() {
-  var elements = document.getElementsByClassName("city");
+function btn(){
+  x=document.getElementsByClassName("city")
+ for(i=0;i<x.length;i++){
+  x[i].style.fontFamily="cursive"
+ }
 
-  for (var i = 0; i < elements.length; i++) {
-    if (elements[i].style.display === "none") {
-      elements[i].style.display = "block"; // Show the element
-    } else {
-      elements[i].style.display = "none"; // Hide the element
-    }
-  }
-
-  // Optionally change the button text based on visibility state:
-  var button = document.querySelector("button");
-  if (elements[0].style.display === "none") {
-    button.textContent = "Show elements";
-  } else {
-    button.textContent = "Hide elements";
-  }
 }
 </script>
 
