--- a/pro75.html
+++ b/pro75.html
@@ -64,7 +64,7 @@ footer {
 @media (max-width: 600px) {
   section {
     -webkit-flex-direction: column;
-    flex-direction: column;
+   flex-direction:row-reverse;
   }
 }
 </style>
