--- a/pro76.html
+++ b/pro76.html
@@ -38,15 +38,18 @@
     flex-grow: 3;
     background-color: rgb(15, 135, 15);
   }
+  .fmf{
+    font-family: 'Times New Roman', Times, serif;
+  }
 </style>
 </head>
 <body>
 
 <div class="flex-container">
-  <div class="flex-item item-1">
+  <div class="flex-item item-1 fmf">
     Flex Item 1
   </div>
-  <div class="flex-item item-2">
+  <div class="flex-item item-2 fmf">
     Flex Item 2
   </div>
 </div>
