--- a/fm5.html
+++ b/fm5.html
@@ -4,17 +4,16 @@
 
 <h2>HTML Forms</h2>
 
-<form action="" >
-  <!-- label and  in that 'for="fname" is used
-    So when a user clicks on the label, it focuses on the input field automatically.'-->
+<form action="/action_page.php">
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value="John"><br>
-  <label>Last name:</label><br>
+  <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value="Doe"><br><br>
   <input type="submit" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>If you click the "Submit" button, the form-data will be sent to a
+page called "/action_page.php".</p>
 
 </body>
 </html>
