--- a/fm4.html
+++ b/fm4.html
@@ -4,7 +4,7 @@
 
 <h2 style="background-color: blueviolet;">The name Attribute</h2>
 
-<form action="/action_page.php">
+<form action="/action_page.php"  target="_blank">
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" value="John"><br><br>
   <input type="submit" value="Submit">
