--- a/fm6.html
+++ b/fm6.html
@@ -6,7 +6,7 @@
 
 <p>When submitting this form, the result will be opened in a new browser tab:</p>
 
-<form action="/action_page.php" target="_blank">
+<form action="/action_page.php" target="_blank" method="post">
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value="John"><br>
   <label for="lname">Last name:</label><br>
