--- a/css/ex2.html
+++ b/css/ex2.html
@@ -46,13 +46,14 @@ div.third {
 <p>When using the opacity property to add transparency to the background of an element, all of its child elements become transparent as well. This can make the text inside a fully transparent element hard to read:</p>
 
 <div class="first">
-  <h1 class="s1"><b>shop</b><b>s</b><b>s</b><b>s</b>opacity 0.1</h1>
+  <h1 class="s1"><b>shop</b><b>s</b class><b>s</b><b>s</b>opacity 0.1</h1>
   <h1 class="s2"><b>system</b><b>s</b><b>s</b><b>s</b>opacity 0.1</h1>
   <h1><b>s</b><b>s</b><b>s</b></h1>
   <h1>opacity 0.1</h1>
   <h1>opacity 0.1</h1>
   <h2>opacity 0.1</h2>
 </div>
+
 <b>s</b><b>s</b><b>s</b>
 <div class="second">
   <h1>opacity 0.3</h1>
