--- a/css/p1.html
+++ b/css/p1.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-p {
-  text-align: center;
-  color: red;
-} 
-</style>
-</head>
-<body>
 
-<p>Every paragraph will be affected by the style.</p>
-<p>Me too!</p>
-<p>And me!</p>
+<head>
+  <style>
+    p{
+      text-align: center;
+      color: red;
+    }
+  </style>
+</head>
+
+<body style="color: green;margin-left: 40px">
+
+  <p>Every paragraph will be affected by the style.</p>
+  <p>Me too!</p>
+  <p>And me!</p>
 
 </body>
+
 </html>
-
-
