--- a/css/p24.html
+++ b/css/p24.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-p.dotted {border-style: dotted;}
+p.dotted h1.s1{border-style: dotted;}
 p.dashed {border-style: dashed;}
 p.solid {border-style: solid;}
 p.double {border-style: double;}
@@ -34,7 +34,7 @@ h1.mix{border-style: dotted;}
 <p class="hidden">A hidden border.</p>
 <p class="mix">A mixed border.</p>
 <h1 class="mix">hiii</h1>
-<h1>sss</h1>
+<h1 class="dotted">sss</h1>
 </body>
 </html>
 
