--- a/css/p4.html
+++ b/css/p4.html
@@ -6,8 +6,12 @@ p.center {
   text-align: center;
   color: red;
 }
+h1.center {
+  text-align: center;
+  color: rgb(55, 216, 14);
+}
 
-p.large {
+p.large:hover {
   font-size: 300%;
 }
 </style>
