--- a/css/p89.html
+++ b/css/p89.html
@@ -4,11 +4,12 @@
 
 <style>
 body {
-    font-family: "Bunge", sans-serif;
+    font-family: "bg", sans-serif;
 }
-@font-face{
-    font-family:"Bungee" ;
-    src: url('./fonts/bun.ttf');
+
+@font-face {
+    font-family: bg;
+    src: url('./fonts/TitanOne-Regular.ttf');
 }
 </style>
 </head>
